fixed glow to overlap touch areas

--- a/src/www/css/app/mode_menu.less
+++ b/src/www/css/app/mode_menu.less
@@ -8,9 +8,16 @@
   .border-highlight;
   text-align: center;
   cursor: pointer;
-  &.touch {
+  &.touch:after {
+    content: '';
+    position: absolute;
+    right: -17px;
+    top: -21px;
+    width: 99px;
+    height: 99px;
     background: url(../../assets/img/touch_glow@2x.png) center center no-repeat;
     background-size: 99px 99px;
+    z-index: 1;
   }
   .label {
     display: inline-block;
